--- a/massages.html
+++ b/massages.html
@@ -96,117 +96,174 @@
     </header><!--/header-->
 
     <section id="content">
-        
         <div class="get-started center wow fadeInDown">
-            <h2>The Beauty Break Facial</h2>
+            <h2>Swedish/Shiatsu Massage</h2><p>(by Holistic)</p>
             <p class="lead"> 
-            <strong>35 minutes</strong><br><br>
-            This facial includes cleansing, steaming, exfoliation, and a facial massage ending with a moisturizing lotion. <br><strong>Recommended for all skin types</strong></p>
+            Classic movement with warm oil to improve blood circulation, relieving tension and muscle pain</p>
             <div class="request">
-                <h4>45 mins<br><strong>$60</strong></h4>
+                <h4>30 mins<br><strong>$50</strong></h4>
+            </div>
+            <div class="request">
+                <h4>45 mins<br><strong>$65</strong></h4>
+            </div>
+            <div class="request">
+                <h4>60 mins<br><strong>$85</strong></h4>
+            </div>
+            <div class="request">
+                <h4>90 mins<br><strong>$120</strong></h4>
+            </div>
+            <div class="request">
+                <h4>120 mins<br><strong>$150</strong></h4>
             </div>
         </div><!--/.get-started-->
 
         <div class="get-started center wow fadeInDown">
-            <h2>Spring Signature Facial</h2>
+            <h2>Spring Aromatherapy</h2><p>(by Holistic)</p>
             <p class="lead">
-            <strong>45 minutes</strong><br><br>
-            This facial includes cleaning, steaming, exfoliation, extraction, the use of a high frequency machine to minimize pores and promote collagen in the face, ending with a facial massage with a moisturizing lotion. <br><strong>Recommended for all skin types</strong></p>
+            Classic massage incorporating pure botanical essence to help balance the mind and body</p>
             <div class="request">
-                <h4>$70</h4>
+                <h4>30 mins<br><strong>$60</strong></h4>
             </div>
-        </div><!--/.get-started-->    
-
-        <div class="get-started center wow fadeInDown">
-            <h2>Deep Cleansing Facial</h2>
-            <p class="lead">
-            <strong>90 minutes</strong><br><br>
-            This truly personalize facial includes cleansing, steaming,exfoliation, more detailed extraction, the use of a high frequency machine to minimize pores and promote collagen in the face, ending with a facial massage with a moisturizing lotion. <br><strong>Recommended for problematic skin types</strong></p>
             <div class="request">
-                <h4>$125</h4>
+                <h4>45 mins<br><strong>$75</strong></h4>
             </div>
-        </div><!--/.get-started-->  
-
-        <div class="get-started center wow fadeInDown">
-            <h2>Peeling Facial</h2>
-            <p class="lead">
-            <strong>90 minutes</strong><br><br>
-            Rejuvenate your skin with our AHA-BHA facial products from Yon-Ka Paris. This facial works to refine acne skins. Start with a gentle cleansing, removal of extra oil form pores to smooth the fine lines from acne scars with a peel. <br><strong>Recommended for problematic skin types</strong></p>
             <div class="request">
-                <h4>$135</h4>
+                <h4>60 mins<br><strong>$95</strong></h4>
             </div>
-        </div><!--/.get-started-->  
-
-        <div class="get-started center wow fadeInDown">
-            <h2>Lifting-Effect Facial</h2>
-            <p class="lead">
-            <strong>90 minutes</strong><br><br>
-            Helps lift and reduce wrinkles and fine lines. This facial stimulates the vitality of the skin and facial contours to appear tighter and keeps the face generously hydrated. <br><strong>Recommended for mature skin types</strong></p>
             <div class="request">
-                <h4>$135</h4>
+                <h4>90 mins<br><strong>$130</strong></h4>
+            </div>
+            <div class="request">
+                <h4>120 mins<br><strong>$160</strong></h4>
             </div>
         </div><!--/.get-started--> 
 
         <div class="get-started center wow fadeInDown">
-            <h2>Collagen Anti-Aging Facial</h2>
-            <p class="lead">
-            <strong>80 minutes</strong><br><br>
-            Developd to simultaneously stimulate, exfoliate and nourish the multiple layers of your delicate skin with anti-aging mask. This relaxing facial is result-orientated and aromatic. It re-establishes softness, vibrancy and elasticity back to your healthy skin. <br><strong>Recommended for mature skin types</strong> </p>
+            <h2>Hot Stone Massage</h2><p>(by Holistic)</p>
+            <p class="lead"> 
+            This massage is enhanced by incorporating heated natural soap stones to unlock tension and stress that are deep within the muslces</p>
             <div class="request">
-                <h4>$115</h4>
+                <h4>60 mins<br><strong>$100</strong></h4>
+            </div>
+            <div class="request">
+                <h4>90 mins<br><strong>$140</strong></h4>
+            </div>
+            <div class="request">
+                <h4>120 mins<br><strong>$180</strong></h4>
+            </div>
+        </div><!--/.get-started-->   
+
+        <div class="get-started center wow fadeInDown">
+            <h2>Sports Massage</h2><p>(by Holistic)</p>
+            <p class="lead"> 
+            This massage uses therapeutic techniques that combine massage, yoga and acupuncture to relieve tension, pain and stress. Great option for post workouts or recreational sportings</p>
+            <div class="request">
+                <h4>60 mins<br><strong>$90</strong></h4>
+            </div>
+            <div class="request">
+                <h4>90 mins<br><strong>$130</strong></h4>
+            </div>
+            <div class="request">
+                <h4>120 mins<br><strong>$170</strong></h4>
             </div>
         </div><!--/.get-started--> 
 
         <div class="get-started center wow fadeInDown">
-            <h2>Deep Hydrating Facial</h2>
+            <h2>RMT Massage</h2>
             <p class="lead">
-            <strong>90 minutes</strong><br><br>
-            This high performance, deep hydrating facial will revive the most dehydrated and dull complexions, eliminating signs of stress and helps restore balance into itself. <br><strong>Recommended for all skin types</p>
+            Classic massage incorporating pure botanical essence to help balance the mind and body. Performed by an Registered Massage Therapist</p>
             <div class="request">
-                <h4>$115</h4>
+                <h4>30 mins<br><strong>$55</strong></h4>
             </div>
-        </div><!--/.get-started-->  
-
-        <div class="get-started center wow fadeInDown">
-            <h2>Teenage Facial</h2>
-            <p class="lead">
-            <strong>45 minutes</strong><br><br>
-            This relaxing, beneficial treatment promotes early habits for great skincare and hygiene. Starting with thorough skin analysis, followed by a cleaning, steaming, a gentle pee. Extraction is performed as needed and a cooling mask is applied, finishing with a moisturizing lotion. <br><strong>Recommended for young skin types</strong></p>
             <div class="request">
-                <h4>$80</h4>
+                <h4>45 mins<br><strong>$70</strong></h4>
+            </div>
+            <div class="request">
+                <h4>60 mins<br><strong>$90</strong></h4>
+            </div>
+            <div class="request">
+                <h4>90 mins<br><strong>$130</strong></h4>
+            </div>
+            <div class="request">
+                <h4>120 mins<br><strong>$170</strong></h4>
             </div>
         </div><!--/.get-started--> 
 
         <div class="get-started center wow fadeInDown">
-            <h2>Gentleman's Spa Signaure Facial</h2>
+            <h2>RMT Massage</h2><p>(with Hot Stones)</p>
             <p class="lead">
-            <strong>60 minutes</strong><br><br>
-            With 5 steps progressve cleansing, you will experience the truly personalized complete facial care with the addition of an anti-aging mask at the end. <br><strong>Recommended for all skin types</strong> </p>
+            CClassic massage enhanced by heated natural soap stones. Performed by an Registered Massage Therapist</p>
             <div class="request">
-                <h4>$105</h4>
+                <h4>45 mins<br><strong>$90</strong></h4>
             </div>
-        </div><!--/.get-started-->
+            <div class="request">
+                <h4>60 mins<br><strong>$120</strong></h4>
+            </div>
+            <div class="request">
+                <h4>90 mins<br><strong>$170</strong></h4>
+            </div>
+            <div class="request">
+                <h4>120 mins<br><strong>$200</strong></h4>
+            </div>
+        </div><!--/.get-started--> 
 
         <div class="get-started center wow fadeInDown">
-            <h2>Eye Contour Anti-Wrinkle Treatment</h2>
+            <h2>RMT Reflexology</h2>
             <p class="lead">
-            <strong>45 minutes</strong><br><br>
-            Combined action of active plant ingredients, eye mask and speciality acupressure massages to sooth away wrinkles, fine lines and improve signs of fatigue.</p>
+            Is a natural healing massage specific to the feet to improve overall health. By applying pressure to specific zones of the body that are mirrored by the nerve endings on the base of your feet</p>
             <div class="request">
-                <h4>$65</h4>
+                <h4>30 mins<br><strong>$40</strong></h4>
             </div>
-        </div><!--/.get-started-->
+            <div class="request">
+                <h4>60 mins<br><strong>$75</strong></h4>
+            </div>
+        </div><!--/.get-started--> 
 
         <div class="get-started center wow fadeInDown">
-            <h2>Lifting-Effect Facial</h2>
+            <h2>Osteopathic Massage</h2>
             <p class="lead">
-            <strong>45 minutes</strong><br><br>
-            Combined action of active ingredients and a cold mask and lymphatic drainage massage that will eliminate toxins from the eye bag. The results of a calm and firm contour of the eyes.
-            </p>
+            Tjis massage therpay is the assessment of soft tissue and joints of the body. This treatment helps prevent physical dysfunction and pain by using osteopathic techniques. Performed by an Osteopathic therapist.</p>
             <div class="request">
-                <h4>$55</h4>
+                <h4>30 mins<br><strong>$60</strong></h4>
             </div>
-        </div><!--/.get-started-->
+            <div class="request">
+                <h4>45 mins<br><strong>$85</strong></h4>
+            </div>
+            <div class="request">
+                <h4>60 mins<br><strong>$110</strong></h4>
+            </div>
+            <div class="request">
+                <h4>90 mins<br><strong>$150</strong></h4>
+            </div>
+            <div class="request">
+                <h4>120 mins<br><strong>$190</strong></h4>
+            </div>
+        </div><!--/.get-started--> 
+
+        <div class="get-started center wow fadeInDown">
+            <h2>Head Massage</h2><p>(by Holistic)</p>
+            <p class="lead">
+            This scalp massage have been proven to provide tremendous benefits, including relieving stress from the body, improving concentration, sleeping and strengthening the roots of your hair</p>
+            <div class="request">
+                <h4>15 mins<br><strong>$30</strong></h4>
+            </div>
+            <div class="request">
+                <h4>30 mins<br><strong>$50</strong></h4>
+            </div>
+        </div><!--/.get-started--> 
+
+        <div class="get-started center wow fadeInDown">
+            <h2>Chinese Herbal Foot Massage</h2><p>(by Holistic)</p>
+            <p class="lead">
+            Based on traditional Chinese medicine, our herbal massage utilized acupressure points and blood flow to induce stress-relief</p>
+            <div class="request">
+                <h4>30 mins<br><strong>$35</strong></h4>
+            </div>
+            <div class="request">
+                <h4>60 mins<br><strong>$70</strong></h4>
+            </div>
+        </div><!--/.get-started--> 
+
     </section><!--/#feature-->
 
     <script src="js/jquery.js"></script>
